[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/ArialTh.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level3/Museum/Baumstamm_.png" type="Texture" id=2]
[ext_resource path="res://Level3/Museum/Pferdemaske.gd" type="Script" id=3]
[ext_resource path="res://Level3/Museum/museum_bg.PNG" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.235294, 0.376471, 0.854902, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.486275 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0196078, 0.0156863, 0.0156863, 0.34902 )

[sub_resource type="DynamicFont" id=2]
size = 52
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.235294, 0.376471, 0.854902, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[node name="Museum_Pferdemaske" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1917.0
margin_bottom = 1079.0
texture = ExtResource( 4 )
expand = true

[node name="texture" type="TextureRect" parent="."]
margin_left = 645.0
margin_top = 140.0
margin_right = 1186.0
margin_bottom = 882.0
texture = ExtResource( 2 )

[node name="Button_moreInfo" type="Button" parent="."]
margin_left = 1529.0
margin_top = 15.0
margin_right = 1761.0
margin_bottom = 58.0
custom_colors/font_color_focus = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.376471, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "More info"

[node name="Button_back" type="Button" parent="."]
margin_left = 1598.0
margin_top = 970.0
margin_right = 1830.0
margin_bottom = 1043.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Back"

[node name="titel_label" type="Label" parent="."]
margin_left = 7.0
margin_top = 65.0
margin_right = 498.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 2 )
text = "A bronze horse mask"

[node name="data" type="Label" parent="."]
margin_left = 15.0
margin_top = 141.0
margin_right = 516.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Dating: 583/82 BC
Origin: \"Princess\" grave of Bettelb√ºhl
Topic: Burial"

[node name="info_text" type="Label" parent="."]
margin_left = 1511.0
margin_top = 64.0
margin_right = 1911.0
margin_bottom = 875.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "In 2010, archaeologists recovered a burial chamber from a burial mound near Herbertingen (Kreis Sigmaringen), 3 km from the Heuneburg settlement, and took the 80-tonne so-called block to a specialist laboratory for further investigation.

There, the block was analysed using the latest methods and the burial chamber was excavated.
A chariot grave with rich grave goods came to light, which contained jewellery made of gold and amber as well as this decorated bronze horse mask. 

The burial could be dated to the winter of 583/82 BC based on the good preservation of the wood."
autowrap = true

[node name="Button_burialsInfo" type="Button" parent="."]
margin_left = 1418.0
margin_top = 896.0
margin_right = 1909.0
margin_bottom = 948.0
custom_colors/font_color_focus = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.376471, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "More information about burials at the Heuneburg"

[connection signal="pressed" from="Button_moreInfo" to="." method="_on_Button_moreInfo_pressed"]
[connection signal="pressed" from="Button_back" to="." method="_on_Button_back_pressed"]
[connection signal="pressed" from="Button_burialsInfo" to="." method="_on_Button_burialsInfo_pressed"]
